Changed R funtion to use python colormapwq!

--- a/wheat/Makefile
+++ b/wheat/Makefile
@@ -3,6 +3,7 @@ default : rgbcolormaps
 rgbcolormaps : makergbcolormap
 	./makergbcolormap -n 4 rgb3colormap.ppm
 	./makergbcolormap -n 5 rgb4colormap.ppm
+	./makergbcolormap -n 6 rgb5colormap.ppm
 
 .PHONY : default rgbcolormaps clean
 
